admin can edit product

--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -21,5 +21,8 @@
       </tr>
       {% endfor %}
     </table>
+
+    <a href="/admin/products">product list</a>
+    <a href="/admin/products/add">add</a>
   </body>
 </html>
