--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -43,14 +43,25 @@
       </ul>
       {% else %}
       <p>Your cart is empty.</p>
-      {% endif %}
-
-      <h2>All Shoes</h2>
+      {% endif %}      
+      <h3>All Products</h3>
+           
       <ul>
-        {% for product in products %}
-        <li>{{ product.name }} — ₹{{ product.price }}</li>
-        {% endfor %}
+                {% for product in products %}        
+        <li>
+                    {{ product.name }} - ₹{{ product.price }}          
+          <form
+            method="post"
+            action="/add_to_cart/{{ user.id }}/{{ product.id }}"
+            style="display: inline"
+          >
+                        <button type="submit">Add to Cart</button>          
+          </form>
+                 
+        </li>
+                {% endfor %}      
       </ul>
+         
     </div>
   </body>
 </html>
