--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -22,7 +22,7 @@
       {% endfor %}
     </table>
 
-    <a href="/admin/products">product list</a>
+    <a href="/admin/products">product list</a><br />
     <a href="/admin/products/add">add</a>
   </body>
 </html>
