--- a/app/templates/admin_add_product.html
+++ b/app/templates/admin_add_product.html
@@ -9,12 +9,14 @@
     <!-- app/templates/admin_add_product.html -->
 
     <h2>Add New Shoe</h2>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
       <label for="name">Shoe Name:</label>
       <input type="text" name="name" required /><br />
 
       <label for="price">Price:</label>
       <input type="number" step="0.01" name="price" required /><br />
+      <label>Upload Image:</label>
+      <input type="file" name="image" accept="image/*" required /><br />
 
       <button type="submit">Add Product</button>
     </form>
