--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -28,9 +28,15 @@
 
       {% if cart_items %}
       <ul>
-        {% for item in cart_items %}
+        {% for product in products %} {% for item in cart_items %}
         <li>
-          {{ item.product.name }} – ₹{{ item.product.price }}
+          {% if product.image_filename %}
+          <img
+            src="/static/uploads/products/{{ product.image_filename }}"
+            width="50"
+            height="50"
+          />
+          {% endif %} {{ item.product.name }} – ₹{{ item.product.price }}
           <form
             method="post"
             action="/remove_from_cart/{{ user.id }}/{{ item.product.id }}"
@@ -39,7 +45,7 @@
             <button type="submit">Remove</button>
           </form>
         </li>
-        {% endfor %}
+        {% endfor %} {% endfor %}
       </ul>
       {% else %}
       <p>Your cart is empty.</p>
